--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
     {
       "name": "client",
       "request": "launch",
-      "type": "dart"
+      "type": "dart",
+      "args": ["-v"]
     },
     {
       "name": "client (profile mode)",
