--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   http: ^0.13.4
   flutter_pw_validator: ^1.4.2
   flutter_secure_storage: ^5.0.2
+  cached_network_image: ^3.2.1
+  webview_flutter: ^3.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
