--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   cached_network_image: ^3.2.1
   webview_flutter: ^3.0.4
+  flutter_phoenix: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
